[gd_scene load_steps=64 format=3 uid="uid://c7dvp5stlvk2g"]

[ext_resource type="Script" path="res://Scripts/bjørn.gd" id="1_csrmv"]
[ext_resource type="Texture2D" uid="uid://dovqut03sajmu" path="res://Sprites/Bjørn/teddyfront.png" id="1_k2pfm"]
[ext_resource type="Texture2D" uid="uid://cbupscqedy8ma" path="res://Sprites/Bjørn/teddysideIdel1.png" id="2_jupa5"]
[ext_resource type="Texture2D" uid="uid://b0et253olydj7" path="res://Sprites/Bjørn/Teddybackidle.png" id="3_40vft"]
[ext_resource type="Texture2D" uid="uid://nr3swj2asqvf" path="res://Sprites/Bjørn/teddyfrontshoot.png" id="4_nxgpo"]
[ext_resource type="Texture2D" uid="uid://dhqwnbi58st2j" path="res://Sprites/Bjørn/teddyshootside.png" id="5_gqx4j"]
[ext_resource type="Texture2D" uid="uid://c6plonfd1bc22" path="res://Sprites/Bjørn/teddyfrontwalk1.png" id="6_qsvg3"]
[ext_resource type="Texture2D" uid="uid://bptex18xdskgw" path="res://Sprites/Bjørn/Teddythrowupv1.png" id="7_3bgjj"]
[ext_resource type="Texture2D" uid="uid://ci7x12uk2vv2u" path="res://Sprites/Bjørn/teddywalksid.png" id="7_nc6ct"]
[ext_resource type="Texture2D" uid="uid://caufl7io57v1v" path="res://Sprites/Bjørn/teddybackwalk1.png" id="8_dgfyb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1wght"]
radius = 20.0
height = 104.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1wj5s"]
atlas = ExtResource("1_k2pfm")
region = Rect2(0, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qpkk"]
atlas = ExtResource("1_k2pfm")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu810"]
atlas = ExtResource("1_k2pfm")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r4jr"]
atlas = ExtResource("1_k2pfm")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xh8u"]
atlas = ExtResource("1_k2pfm")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0gj6"]
atlas = ExtResource("2_jupa5")
region = Rect2(0, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxv3m"]
atlas = ExtResource("2_jupa5")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_njsbq"]
atlas = ExtResource("2_jupa5")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_jum6a"]
atlas = ExtResource("2_jupa5")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag1sc"]
atlas = ExtResource("2_jupa5")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg7ha"]
atlas = ExtResource("3_40vft")
region = Rect2(0, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_txn07"]
atlas = ExtResource("3_40vft")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7cg7"]
atlas = ExtResource("3_40vft")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_a62sv"]
atlas = ExtResource("3_40vft")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjym5"]
atlas = ExtResource("3_40vft")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_64ffb"]
atlas = ExtResource("4_nxgpo")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_caqf6"]
atlas = ExtResource("4_nxgpo")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_55efd"]
atlas = ExtResource("4_nxgpo")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uwfc"]
atlas = ExtResource("5_gqx4j")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta15w"]
atlas = ExtResource("5_gqx4j")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iehm"]
atlas = ExtResource("5_gqx4j")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_loqu6"]
atlas = ExtResource("5_gqx4j")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4brr"]
atlas = ExtResource("5_gqx4j")
region = Rect2(750, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_yky2f"]
atlas = ExtResource("5_gqx4j")
region = Rect2(900, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_a36ok"]
atlas = ExtResource("5_gqx4j")
region = Rect2(1050, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvhpo"]
atlas = ExtResource("7_3bgjj")
region = Rect2(0, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh0qg"]
atlas = ExtResource("7_3bgjj")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_no1ba"]
atlas = ExtResource("7_3bgjj")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0e5n"]
atlas = ExtResource("7_3bgjj")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3hvm"]
atlas = ExtResource("7_3bgjj")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_teim4"]
atlas = ExtResource("7_3bgjj")
region = Rect2(750, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehpv5"]
atlas = ExtResource("7_3bgjj")
region = Rect2(900, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf14a"]
atlas = ExtResource("6_qsvg3")
region = Rect2(0, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_xldct"]
atlas = ExtResource("6_qsvg3")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvs6m"]
atlas = ExtResource("6_qsvg3")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dn8f"]
atlas = ExtResource("6_qsvg3")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_p04ok"]
atlas = ExtResource("6_qsvg3")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d5iq"]
atlas = ExtResource("7_nc6ct")
region = Rect2(0, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8sbx"]
atlas = ExtResource("7_nc6ct")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk2yu"]
atlas = ExtResource("7_nc6ct")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qk3r"]
atlas = ExtResource("7_nc6ct")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_37sxm"]
atlas = ExtResource("7_nc6ct")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0vl1"]
atlas = ExtResource("8_dgfyb")
region = Rect2(0, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2uxf"]
atlas = ExtResource("8_dgfyb")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sk8d"]
atlas = ExtResource("8_dgfyb")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnxxv"]
atlas = ExtResource("8_dgfyb")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtal4"]
atlas = ExtResource("8_dgfyb")
region = Rect2(600, 0, 150, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_bs2ub"]
animations = [{
"frames": [],
"loop": true,
"name": &"dance",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wj5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qpkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu810")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r4jr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xh8u")
}],
"loop": true,
"name": &"idl down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0gj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxv3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njsbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jum6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag1sc")
}],
"loop": true,
"name": &"idl left right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg7ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txn07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7cg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a62sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjym5")
}],
"loop": true,
"name": &"idl up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64ffb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_caqf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55efd")
}],
"loop": true,
"name": &"shoot down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uwfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta15w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loqu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4brr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yky2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a36ok")
}],
"loop": true,
"name": &"shoot left right",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvhpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh0qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no1ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0e5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3hvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teim4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehpv5")
}],
"loop": true,
"name": &"shoot up",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf14a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xldct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvs6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dn8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p04ok")
}],
"loop": true,
"name": &"walk down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d5iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8sbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk2yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qk3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37sxm")
}],
"loop": true,
"name": &"walk left right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0vl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2uxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sk8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnxxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtal4")
}],
"loop": true,
"name": &"walk up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_13p4w"]
radius = 373.484

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_60gcc"]
radius = 48.0
height = 224.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b8r6s"]
radius = 104.173

[sub_resource type="CircleShape2D" id="CircleShape2D_nlp04"]
radius = 120.266

[node name="Bjørn" type="CharacterBody2D"]
script = ExtResource("1_csrmv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1wght")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bs2ub")
animation = &"shoot up"
autoplay = "idl down"

[node name="detection" type="Area2D" parent="."]
light_mask = 2
visibility_layer = 2
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
light_mask = 4
visibility_layer = 4
shape = SubResource("CircleShape2D_13p4w")

[node name="bjørn hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bjørn hitbox"]
shape = SubResource("CapsuleShape2D_60gcc")

[node name="invin timer" type="Timer" parent="."]

[node name="attack timer" type="Timer" parent="."]

[node name="attack cooldown timer" type="Timer" parent="."]
wait_time = 5.0

[node name="attack area" type="Area2D" parent="."]
scale = Vector2(4, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack area"]
shape = SubResource("CircleShape2D_b8r6s")

[node name="flee area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="flee area"]
shape = SubResource("CircleShape2D_nlp04")

[node name="Papirer" type="Node2D" parent="."]

[node name="papirsfly timer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="body_entered" from="bjørn hitbox" to="." method="_on_bjørn_hitbox_body_entered"]
[connection signal="body_exited" from="bjørn hitbox" to="." method="_on_bjørn_hitbox_body_exited"]
[connection signal="timeout" from="invin timer" to="." method="_on_invin_timer_timeout"]
[connection signal="timeout" from="attack timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="attack cooldown timer" to="." method="_on_attack_cooldown_timer_timeout"]
[connection signal="body_entered" from="attack area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack area" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="flee area" to="." method="_on_flee_area_body_entered"]
[connection signal="body_exited" from="flee area" to="." method="_on_flee_area_body_exited"]
[connection signal="timeout" from="papirsfly timer" to="." method="_on_papirsfly_timer_timeout"]
